# Interpreting-the-Quran-using-artificial-intelligence

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/Interpreting-the-Quran-using-artificial-intelligence/: SKILL.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: update-frontend-dependencies.md
.codex/: AGENTS.md
.github/skills/documentation-writer/: SKILL.md
.github/skills/github-actions-failure-debugging/: SKILL.md
.github/skills/pytest-coverage/: SKILL.md
.github/workflows/: ci.yml  nextjs.yml  publish-python.yml  sentient_core.yml
ai-engine/: quran_solver.py  requirements.txt  worker.py
ai-engine/data/: scientific_miracles_map.py
ai-engine/prompts/: domain_prompts.py
backend/: .dockerignore  Dockerfile  config.py  main.py  requirements.txt
backend/data/: __init__.py  categories.py  categories_data.py  miracles_data.py  quran_data.py  sample_ayahs.py  scientific_miracles.py  tafsir_data.py
backend/models/: __init__.py  ayah.py  ayah_topic.py  category.py  keyword.py  models.py  qa_pair.py  scientific_miracle.py  tafsir.py
backend/routers/: ask.py  categories.py  chat.py  miracles.py  quran.py  tafsir.py  upload.py
backend/schemas/: __init__.py  ayah.py  category.py  chat.py  schemas.py  tafsir.py
backend/services/: __init__.py  ai_service.py  gptq_service.py  quran_service.py  quran_text_service.py  search_service.py  tafsir_service.py
backend/tests/: conftest.py
core_brain/: __init__.py  analyst.py  architect.py  coder.py  main.py  memory.py  phantom.py  predator.py  validator.py
database/: schema.sql  seed.sql
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+51 files in other folders)
